Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/UseEnum.out
UseEnum.java:19:29: compiler.err.cant.resolve.location: kindname.variable, beast, , , (compiler.misc.location: kindname.class, UseEnum, null)
1 error
